Publish Archive-It's latest implementation
