# ait-implementation/wasapi/serializers.py
@@ -1,6 +1,8 @@
+from django.conf import settings
+from django.core.exceptions import PermissionDenied
 from rest_framework import serializers
-from archiveit.settings import WEBDATA_LOCATION_TEMPLATE
 from archiveit.archiveit.models import WarcFile
+from archiveit.wasapi.models import WasapiJob
 
 class WebdataFileSerializer(serializers.HyperlinkedModelSerializer):
     filetype = serializers.CharField()
@@ -13,9 +15,10 @@ class WebdataFileSerializer(serializers.HyperlinkedModelSerializer):
     def account_method(self, obj):
         return obj.account_id
     def crawl_start_method(self, obj):
-        return obj.crawl_job.original_start_date
+        crawl_job = obj.crawl_job
+        return crawl_job and crawl_job.original_start_date
     def locations_method(self, obj):
-        return [WEBDATA_LOCATION_TEMPLATE % obj.__dict__]
+        return [settings.WEBDATA_LOCATION_TEMPLATE % obj.__dict__]
     class Meta:
         model = WarcFile
         fields = (
@@ -28,3 +31,43 @@ class WebdataFileSerializer(serializers.HyperlinkedModelSerializer):
           'crawl',
           'crawl_start',
           'locations')
+
+class JobSerializer(serializers.HyperlinkedModelSerializer):
+
+    state = serializers.CharField(read_only=True)
+    account = serializers.PrimaryKeyRelatedField(read_only=True)
+    jobtoken = serializers.SerializerMethodField('jobtoken_method')
+    def jobtoken_method(self, obj):
+        return str(obj.id)
+
+    class Meta:
+        model = WasapiJob
+        fields = (
+          'jobtoken',
+          'function',
+          'query',
+          'submit_time',
+          'termination_time',
+          'state',
+          'account')
+
+    def validate(self, value):
+        # I'd prefer to use a dedicated method rather than hooking into
+        # validation routines, but my "to_internal_value" and "create" methods
+        # don't get called.
+        # It would be nice if we let each field set its value, but I don't see
+        # an easy way to do that.
+        value = self.set_state(value)
+        value = self.set_account(value)
+        return value
+
+    def set_state(self, value):
+        value['state'] = WasapiJob.QUEUED
+        return value
+
+    def set_account(self, value):
+        account = self.context['request'].user.account
+        if not account:  # eg "system" user
+            raise PermissionDenied
+        value['account'] = account
+        return value
